test/fail/redefine.cvc
#include "civic.h"

export int main() {
    int a = 0;
    float a = 5.0;
    return 0;
}
